# investor2

./: .biomeignore  .claudeignore  .copconignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  Taskfile.yml  agr.toml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  test_aaarts_dashboard.ts  test_dashboard.ts  test_dashboard_reconnaissance.py  test_dashboard_simple.py  tsconfig.json  tsconfig.tsbuildinfo
.agent/: SKILLS_INVENTORY.md  agr.toml
.agent/hooks/: post-tool-use-enhanced.mjs  post-tool-use.mjs  post-tool-use.sh  (+1 more)
config/: biome.json  default.yaml  hooks.json
docs/: AAARTS_COMMON_CLI_DESIGN.md  AGENT_PATTERNS.md  CURRENT_STATE_AUDIT.md  DIRECTORY_STRUCTURE.md  ECC_INTEGRATION_STRATEGY.md  ECC_REFERENCE.md  SCHEMA_INTEGRATION_VERIFICATION_CHECKLIST.md  SCHEMA_UNIFICATION_STRATEGY.md  SKILL_DEVELOPMENT_GUIDE.md  SKILL_STANDARDIZATION.md  TASK_7_EXECUTION.sh  TASK_7_IMPLEMENTATION.md
scripts/: backtest_stub.py  build_research_verification_manifest.py  build_strategy_registry.py  error_analysis.py  plot_benchmark.py  repeat_paper_validation.py  statistical_significance.py  validate_paper_catalog.py  verify_paper_factor_suite.py  verify_post_publication_momentum.py
src/: CLAUDE.md  ontology.ts  schemas.ts
tests/: aaarts-cli.test.ts  aaarts-dashboard.spec.ts  dummy.test.ts  ontology.test.ts  pipeline_verification.test.ts  test_dashboard_registry.py  test_paper_catalog.py  test_paper_factor_suite.py  test_post_publication_momentum.py  test_repeated_paper_validation.py  test_research_verification_manifest.py
(+220 files in other folders)
